Moved micro-c examples into folder

--- a/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
+++ b/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
@@ -22,38 +22,6 @@
         <Content Include="Assembly\CPar.fsy" />
         <ClCompile Include="Assembly\driver.c" />
         <Content Include="Assembly\driver.o" />
-        <ClCompile Include="Assembly\ex0.c" />
-        <Content Include="Assembly\ex1.asm" />
-        <ClCompile Include="Assembly\ex1.c" />
-        <Content Include="Assembly\ex1.o" />
-        <ClCompile Include="Assembly\ex2.c" />
-        <ClCompile Include="Assembly\ex3.c" />
-        <ClCompile Include="Assembly\ex4.c" />
-        <ClCompile Include="Assembly\ex5.c" />
-        <Content Include="Assembly\ex6.asm" />
-        <ClCompile Include="Assembly\ex6.c" />
-        <ClCompile Include="Assembly\ex7.c" />
-        <ClCompile Include="Assembly\ex8.c" />
-        <ClCompile Include="Assembly\ex9.c" />
-        <ClCompile Include="Assembly\ex10.c" />
-        <Content Include="Assembly\ex11.asm" />
-        <ClCompile Include="Assembly\ex11.c" />
-        <Content Include="Assembly\ex11.o" />
-        <ClCompile Include="Assembly\ex11count.c" />
-        <ClCompile Include="Assembly\ex12.c" />
-        <ClCompile Include="Assembly\ex13.c" />
-        <ClCompile Include="Assembly\ex14.c" />
-        <ClCompile Include="Assembly\ex15.c" />
-        <ClCompile Include="Assembly\ex16.c" />
-        <ClCompile Include="Assembly\ex17.c" />
-        <ClCompile Include="Assembly\ex18.c" />
-        <ClCompile Include="Assembly\ex19.c" />
-        <ClCompile Include="Assembly\ex20.c" />
-        <ClCompile Include="Assembly\ex21.c" />
-        <ClCompile Include="Assembly\ex22.c" />
-        <ClCompile Include="Assembly\ex23.c" />
-        <ClCompile Include="Assembly\ex24.c" />
-        <ClCompile Include="Assembly\ex25.c" />
         <Content Include="Assembly\FSharp.Core.dll" />
         <Compile Include="Assembly\MicroCCAsm.fs" />
         <Content Include="Assembly\microccasm.exe" />
@@ -62,6 +30,38 @@
         <Content Include="Assembly\try1" />
         <Compile Include="Assembly\X86.fs" />
         <Compile Include="Assembly\X86Comp.fs" />
+        <ClCompile Include="Assembly\mcexamples\ex11count.c" />
+        <ClCompile Include="Assembly\mcexamples\ex12.c" />
+        <ClCompile Include="Assembly\mcexamples\ex13.c" />
+        <ClCompile Include="Assembly\mcexamples\ex14.c" />
+        <ClCompile Include="Assembly\mcexamples\ex15.c" />
+        <ClCompile Include="Assembly\mcexamples\ex16.c" />
+        <ClCompile Include="Assembly\mcexamples\ex17.c" />
+        <ClCompile Include="Assembly\mcexamples\ex18.c" />
+        <ClCompile Include="Assembly\mcexamples\ex19.c" />
+        <ClCompile Include="Assembly\mcexamples\ex20.c" />
+        <ClCompile Include="Assembly\mcexamples\ex21.c" />
+        <ClCompile Include="Assembly\mcexamples\ex22.c" />
+        <ClCompile Include="Assembly\mcexamples\ex23.c" />
+        <ClCompile Include="Assembly\mcexamples\ex24.c" />
+        <ClCompile Include="Assembly\mcexamples\ex25.c" />
+        <ClCompile Include="Assembly\mcexamples\ex0.c" />
+        <ClCompile Include="Assembly\mcexamples\ex1.c" />
+        <ClCompile Include="Assembly\mcexamples\ex2.c" />
+        <ClCompile Include="Assembly\mcexamples\ex3.c" />
+        <ClCompile Include="Assembly\mcexamples\ex4.c" />
+        <ClCompile Include="Assembly\mcexamples\ex5.c" />
+        <ClCompile Include="Assembly\mcexamples\ex6.c" />
+        <ClCompile Include="Assembly\mcexamples\ex7.c" />
+        <ClCompile Include="Assembly\mcexamples\ex8.c" />
+        <ClCompile Include="Assembly\mcexamples\ex9.c" />
+        <ClCompile Include="Assembly\mcexamples\ex10.c" />
+        <ClCompile Include="Assembly\mcexamples\ex11.c" />
+        <Content Include="Assembly\mcexamples\ex1.asm" />
+        <Content Include="Assembly\mcexamples\ex1.o" />
+        <Content Include="Assembly\mcexamples\ex6.asm" />
+        <Content Include="Assembly\mcexamples\ex11.asm" />
+        <Content Include="Assembly\mcexamples\ex11.o" />
     </ItemGroup>
 
 </Project>
