Changed location of files

--- a/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
+++ b/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
@@ -27,6 +27,7 @@
         <Compile Include="Assembly\X64.fs" />
         <Content Include="Assembly\try1" />
         <Compile Include="Assembly\X86.fs" />
+        <Compile Include="Assembly\X64Comp.fs" />
         <Compile Include="Assembly\X86Comp.fs" />
         <Compile Include="Assembly\MicroCCAsm.fs" />
         <Compile Include="Assembly\ParseAndComp.fs" />
@@ -62,8 +63,6 @@
         <Content Include="Assembly\mcexamples\ex6.asm" />
         <Content Include="Assembly\mcexamples\ex11.asm" />
         <Content Include="Assembly\mcexamples\ex11.o" />
-        <Content Include="Assembly\proglog.asm" />
-        <Compile Include="X64Comp.fs" />
     </ItemGroup>
 
 </Project>
