--- a/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
+++ b/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
@@ -29,6 +29,7 @@
         <Content Include="Assembly\try1" />
         <Compile Include="Assembly\X86.fs" />
         <Compile Include="Assembly\X64Comp.fs" />
+        <Compile Include="Assembly\X64CompBackwards.fs" />
         <Compile Include="Assembly\X86Comp.fs" />
         <Compile Include="Assembly\MicroCCAsm.fs" />
         <Compile Include="Assembly\ParseAndComp.fs" />
