Begun work on deroted absyn
- moves some definitions into Allocate.fs

--- a/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
+++ b/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
@@ -24,6 +24,7 @@
         <Content Include="Assembly\FSharp.Core.dll" />
         <Content Include="Assembly\microccasm.exe" />
         <Compile Include="Assembly\Parse.fs" />
+        <Compile Include="Assembly\DecorAbsyn.fs" />
         <Compile Include="Assembly\Allocate.fs" />
         <Compile Include="Assembly\X64.fs" />
         <Content Include="Assembly\try1" />
