Cleanup, moves decoration functions to Decorate.fs

--- a/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
+++ b/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
@@ -27,6 +27,7 @@
         <Content Include="Assembly\microccasm.exe" />
         <Compile Include="Assembly\DecorAbsyn.fs" />
         <Compile Include="Assembly\Allocate.fs" />
+        <Compile Include="Assembly\Decorate.fs" />
         <Compile Include="Assembly\Parse.fs" />
         <Compile Include="Assembly\X64.fs" />
         <Content Include="Assembly\try1" />
