Fixed issue with outermost temp being spilled
- fixes modulo operator by using rax

--- a/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
+++ b/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
@@ -69,6 +69,7 @@
         <ClCompile Include="Assembly\mcexamples\name.c" />
         <ClCompile Include="Assembly\mcexamples\ex_graph.c" />
         <ClCompile Include="Assembly\mcexamples\ex_call.c" />
+        <ClCompile Include="Assembly\mcexamples\ex_if.c" />
         <ClCompile Include="Assembly\test.c" />
     </ItemGroup>
 
