--- a/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
+++ b/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
@@ -70,6 +70,7 @@
         <ClCompile Include="Assembly\mcexamples\ex_graph.c" />
         <ClCompile Include="Assembly\mcexamples\ex_call.c" />
         <ClCompile Include="Assembly\mcexamples\ex_ope.c" />
+        <ClCompile Include="Assembly\mcexamples\ex_glovars.c" />
         <ClCompile Include="Assembly\test.c" />
     </ItemGroup>
 
