--- a/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
+++ b/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
@@ -66,6 +66,7 @@
         <Content Include="Assembly\mcexamples\ex11.asm" />
         <Content Include="Assembly\mcexamples\ex11.o" />
         <ClCompile Include="Assembly\mcexamples\jakobTest.c" />
+        <ClCompile Include="Assembly\mcexamples\johanTest.c" />
     </ItemGroup>
 
 </Project>
