added johanTest to branch

--- a/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
+++ b/RegisterAllocation/RegisterAllocation/RegisterAllocation.fsproj
@@ -64,6 +64,7 @@
         <Content Include="Assembly\mcexamples\ex6.asm" />
         <Content Include="Assembly\mcexamples\ex11.asm" />
         <Content Include="Assembly\mcexamples\ex11.o" />
+        <ClCompile Include="Assembly\mcexamples\johanTest.c" />
     </ItemGroup>
 
 </Project>
